auth-service/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-auth
  name: demo-auth
  namespace: demo-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-auth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-auth
    spec:
      containers: # to change
        - image: demo-auth-gitops
          imagePullPolicy: IfNotPresent
          name: demo-auth-gitops
