auth-service/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-auth-service
  namespace: demo-auth
  labels:
    app: demo-auth
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: demo-auth
